--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 <!-- ========================== -->
 <footer class="w-full mt-20 py-10 bg-white bg-opacity-10 backdrop-blur-md text-center text-white text-sm">
   <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:</p>
+  <p>Link gecomprimeerde pdf: </p>
 </footer>
 
 
