--- a/week1.html
+++ b/week1.html
@@ -120,23 +120,23 @@
           </p>
         </div>
         <!-- Thumbnail -->
-<a href="#foto1" class="block">
-  <img src="assets/fotos.jpg" 
+<a href="#foto10" class="block">
+  <img src="images/schets 1.png" 
        alt="foto" 
        class="w-48 rounded-xl shadow-lg hover:scale-105 transition cursor-pointer">
 </a>
-
+<img src="images/schets 2.png" 
+       alt="foto" 
+       class="w-48 rounded-xl shadow-lg hover:scale-105 transition cursor-pointer">
+</a>
+<img src="images/schets 3.png" 
+       alt="foto" 
+       class="w-48 rounded-xl shadow-lg hover:scale-105 transition cursor-pointer">
+</a>
 <!-- Lightbox -->
-<div id="foto1"
+<div id="images/foto10"
      class="fixed inset-0 bg-black/70 hidden items-center justify-center p-6 backdrop-blur-md"
      onclick="window.location='#'">
-
-  <img src="assets/foto1.jpg"
-       class="max-w-[90%] max-h-[90%] rounded-2xl shadow-2xl">
-</div>
-
-      </div>
-    </div>
   </section>
 <footer class="w-full mt-20 py-10 bg-white bg-opacity-10 backdrop-blur-md text-center text-white text-sm">
   <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:</p>
