--- a/week10.html
+++ b/week10.html
@@ -113,6 +113,10 @@
         </div>
       </div>
     </div>
+    <a href="#foto10" class="block">
+  <img src="images/laatste figma schermen.png" 
+       alt="foto" 
+       class="w-48 rounded-xl shadow-lg hover:scale-105 transition cursor-pointer">
   </section>
 <footer class="w-full mt-20 py-10 bg-white bg-opacity-10 backdrop-blur-md text-center text-white text-sm">
   <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:</p>
