--- a/week1.html
+++ b/week1.html
@@ -139,7 +139,7 @@
      onclick="window.location='#'">
   </section>
 <footer class="w-full mt-20 py-10 bg-white bg-opacity-10 backdrop-blur-md text-center text-white text-sm">
-  <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:</p>
+  <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:https://github.com/axelleroekens/axelleroekens-AxelleRoekens-lostintrainslationprocesdocument</p>
 </footer>
 </body>
 </html>
