--- a/week3.html
+++ b/week3.html
@@ -130,5 +130,5 @@
 </body>
 </html>
 <footer class="w-full mt-20 py-10 bg-white bg-opacity-10 backdrop-blur-md text-center text-white text-sm">
-  <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:</p>
+  <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:https://github.com/axelleroekens/axelleroekens-AxelleRoekens-lostintrainslationprocesdocument</p>
 </footer>
