--- a/week10.html
+++ b/week10.html
@@ -119,7 +119,7 @@
        class="w-48 rounded-xl shadow-lg hover:scale-105 transition cursor-pointer">
   </section>
 <footer class="w-full mt-20 py-10 bg-white bg-opacity-10 backdrop-blur-md text-center text-white text-sm">
-  <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:</p>
+  <p>2025 Axelle Roekens — Trein Procesdocumentatie Link GITHUB:https://github.com/axelleroekens/axelleroekens-AxelleRoekens-lostintrainslationprocesdocument</p>
 </footer>
 </body>
 </html>
