--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <footer class="w-full mt-20 py-10 bg-white bg-opacity-10 backdrop-blur-md text-center text-white text-sm">
   <p>2025 Axelle Roekens — Trein Procesdocumentatie</p>
   <p>Link Github:https://github.com/axelleroekens/axelleroekens-AxelleRoekens-lostintrainslationprocesdocument </p>
-  <a href="assetspdf/Axelle Roekens_1GDM1_LostInTranslation.pdf" download>
+  <a href="assetspdf/Axelle_Roekens_1GDM1_LostInTranslation.pdf" download>
   Download ontwerpdocumentatie (PDF)
 </a>
 </footer>
